--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /* FONTS */
-@import url(http://fonts.googleapis.com/css?family=Roboto:300,400,700,900);
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,700,900);
 
 /*
 Eagles Colors:
